--- a/app/composer.json
+++ b/app/composer.json
@@ -20,7 +20,9 @@
 	"require": {
 		"php": ">=5.3.0",
 		"ext-mcrypt": "*",
-		"cakephp/cakephp": "~2.9"
+		"cakephp/cakephp": "~2.9",
+        "slywalker/boost_cake": "*",
+        "twbs/bootstrap": "4.3.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
